# silero-vad-crs

./: CHANGELOG.md  Cargo.toml  FFI_NOTES.md  LICENSE  README.md  build.rs
examples/: chunked_benchmark.rs  full_audio_benchmark.rs
native/: SILERO_VAD_C_LICENSE  silero_vad.c  silero_vad.h  silero_vad_simd.h  silero_vad_weights.c  silero_vad_weights.h
native/dsp/: resample.c  resample.h
src/: lib.rs
tests/: reference_probs.rs
tests/fixtures/: ref_probs.csv  ref_timestamps.csv
