[package]
name = "silero-vad-crs"
version = "0.1.0"
edition = "2024"
description = "Lightweight Rust wrapper for the silero-vad-c voice activity detector"
license = "MIT"
build = "build.rs"

[dependencies]

[build-dependencies]
cc = "1.2"

[features]
default = []
sse = []
avx2 = []
neon = []
fast-math = []
