[package]
name = "silero-vad-crs"
version = "0.4.0"
edition = "2021"
description = "Rust bindings for a C port of the Silero VAD voice activity detector with zero runtime dependencies and SIMD support"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nipponjo/silero-vad-crs"
homepage = "https://github.com/nipponjo/silero-vad-crs"
documentation = "https://docs.rs/silero-vad-crs"
keywords = ["vad", "silero", "audio", "speech", "ffi"]
categories = ["multimedia::audio", "external-ffi-bindings", "science"]
build = "build.rs"

[dependencies]

[build-dependencies]
cc = "1.2"

[features]
default = []
auto = []
sse = []
avx2 = []
neon = []
wasm-simd = []
fast-math = []
